--- a/Bookkeeping/Bookkeeping/Web.config
+++ b/Bookkeeping/Bookkeeping/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Bookkeeping-20170813092548.mdf;Initial Catalog=aspnet-Bookkeeping-20170813092548;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SkillTreeHomeworkEntities" connectionString="metadata=res://*/Models.DataModels.csdl|res://*/Models.DataModels.ssdl|res://*/Models.DataModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\SkillTreeHomework.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
